# taiga-mcp-server

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  taiga_mcp_server.py  test_server.py
